--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,14 @@
+html {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
 }
 
 #root {
   height: 100dvh;
-  overflow-y: auto;
+  width: 100dvw;
+  overflow: hidden;
+  position: relative;
 }
