--- a/src/app.scss
+++ b/src/app.scss
@@ -1,27 +1,15 @@
 @use "@yamori-design/styles/src/mixins";
 
 .app__content {
-  section {
-    & + section {
-      margin-top: var(--yamori-spacing-large);
-    }
-
-    &#contact {
-      a img {
-        width: 1rem;
-      }
-    }
-
-    &#about-me {
-      h5 {
-        margin-top: var(--yamori-spacing-large);
-      }
+  section#contact {
+    a img {
+      width: 1rem;
     }
   }
 }
 
 @include mixins.within-yamori-theme(dark) {
-  section#contact a#github img {
+  .app__content section#contact a#github img {
     filter: invert(1);
   }
 }
